NIFI-14104 Allow setting of HTTP Request Headers for Elasticsearch requests (#9606)
Signed-off-by: David Handermann <exceptionfactory@apache.org>