@@ -32,6 +32,7 @@ import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -171,26 +172,31 @@ public abstract class AbstractByQueryElasticsearchTest {
 
         postTest(runner, query);
 
-        assertTrue(client.getRequestParameters().isEmpty());
+        assertTrue(client.getElasticsearchRequestOptions().getRequestParameters().isEmpty());
+        assertTrue(client.getElasticsearchRequestOptions().getRequestHeaders().isEmpty());
     }
 
     @Test
-    public void testWithFlowfileInputAndRequestParameters() {
+    public void testWithFlowfileInputAndRequestParametersAndRequestHeaders() {
         final String query = matchAllQuery;
         runner.setProperty(AbstractByQueryElasticsearch.INDEX, INDEX);
         runner.setProperty(AbstractByQueryElasticsearch.TYPE, TYPE);
         runner.setProperty(AbstractByQueryElasticsearch.QUERY_ATTRIBUTE, queryAttr());
         runner.setProperty("refresh", "true");
         runner.setProperty("slices", "${slices}");
+        runner.setProperty(ElasticsearchRestProcessor.DYNAMIC_PROPERTY_PREFIX_REQUEST_HEADER + "Accept", "${accept}");
         runner.assertValid();
-        runner.enqueue(query, Collections.singletonMap("slices", "auto"));
+        runner.enqueue(query, Map.of("slices", "auto", "accept", "application/json"));
         runner.run();
 
         postTest(runner, query);
 
-        assertEquals(2, client.getRequestParameters().size());
-        assertEquals("true", client.getRequestParameters().get("refresh"));
-        assertEquals("auto", client.getRequestParameters().get("slices"));
+        assertEquals(2, client.getElasticsearchRequestOptions().getRequestParameters().size());
+        assertEquals("true", client.getElasticsearchRequestOptions().getRequestParameters().get("refresh"));
+        assertEquals("auto", client.getElasticsearchRequestOptions().getRequestParameters().get("slices"));
+
+        assertEquals(1, client.getElasticsearchRequestOptions().getRequestHeaders().size());
+        assertEquals("application/json", client.getElasticsearchRequestOptions().getRequestHeaders().get("Accept"));
     }
 
     @Test
@@ -263,7 +269,8 @@ public abstract class AbstractByQueryElasticsearchTest {
 
         postTest(runner, query);
 
-        assertTrue(client.getRequestParameters().isEmpty());
+        assertTrue(client.getElasticsearchRequestOptions().getRequestParameters().isEmpty());
+        assertTrue(client.getElasticsearchRequestOptions().getRequestHeaders().isEmpty());
     }
 
     @Test
@@ -275,16 +282,21 @@ public abstract class AbstractByQueryElasticsearchTest {
         runner.setProperty(AbstractByQueryElasticsearch.QUERY_ATTRIBUTE, queryAttr());
         runner.setProperty("refresh", "true");
         runner.setProperty("slices", "${slices}");
+        runner.setProperty(ElasticsearchRestProcessor.DYNAMIC_PROPERTY_PREFIX_REQUEST_HEADER + "Accept", "${accept}");
         runner.setEnvironmentVariableValue("slices", "auto");
+        runner.setEnvironmentVariableValue("accept", "application/json");
         runner.setIncomingConnection(false);
         runner.assertValid();
         runner.run();
 
         postTest(runner, query);
 
-        assertEquals(2, client.getRequestParameters().size());
-        assertEquals("true", client.getRequestParameters().get("refresh"));
-        assertEquals("auto", client.getRequestParameters().get("slices"));
+        assertEquals(2, client.getElasticsearchRequestOptions().getRequestParameters().size());
+        assertEquals("true", client.getElasticsearchRequestOptions().getRequestParameters().get("refresh"));
+        assertEquals("auto", client.getElasticsearchRequestOptions().getRequestParameters().get("slices"));
+
+        assertEquals(1, client.getElasticsearchRequestOptions().getRequestHeaders().size());
+        assertEquals("application/json", client.getElasticsearchRequestOptions().getRequestHeaders().get("Accept"));
     }
 
     @ParameterizedTest
